telemetry/healthcheck/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetryhealthcheck
  labels:
    k8s-app: telemetryhealthcheck
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    app: telemetry-healthcheck
  ports:
  - port: 80
    targetPort: 5001
